--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quản lý quỹ</title>
-  <script src="https://cdn.jsdelivr.net/npm/react@17.0.2/umd/react.production.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/react-dom@17.0.0.2/umd/react-dom.production.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.24.5/babel.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react@17.0.2/umd/react.production.min.js?v=17.0.2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react-dom@17.0.2/umd/react-dom.production.min.js?v=17.0.2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.24.5/babel.min.js?v=7.24.5"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.45.0/dist/umd/supabase.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.45.0/dist/umd/supabase.min.js?v=2.45.0"></script>
 </head>
 <body>
   <div id="app"></div>
@@ -37,13 +37,8 @@
 
     const { useState, useEffect } = React;
 
-    const formatVND = (num) => {
-      return Math.floor(num).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ".");
-    }
-
-    const formatInputVND = (val) => {
-      return val.replace(/[^0-9]/g, "").replace(/\B(?=(\d{3})+(?!\d))/g, ".");
-    }
+    const formatVND = (num) => Math.floor(num).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ".");
+    const formatInputVND = (val) => val.replace(/[^0-9]/g, "").replace(/\B(?=(\d{3})+(?!\d))/g, ".");
 
     // Hàm chuẩn hóa username: loại bỏ dấu, khoảng trắng, ký tự đặc biệt
     const normalizeUsername = (name) => {
@@ -53,14 +48,14 @@
     };
 
     let supabase;
-    if (typeof window.supabase !== 'undefined') {
+    if (typeof window.supabase !== "undefined") {
       supabase = window.supabase.createClient(
         "https://xlshingqqouzqbljysmi.supabase.co",
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inhsc2hpbmdxcW91enFibGp5c21pIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDkwMzQxODYsImV4cCI6MjA2NDYxMDE4Nn0.v9YlKzHEA4a5Ib1LP7Bd_1m1zHFBw_2CjgCBDXmwixQ"
       );
       console.log('Supabase client:', supabase);
     } else {
-      console.error('Supabase not loaded.');
+      console.error("Supabase not loaded.");
     }
 
     const App = () => {
